# Face-Matching

./: .gitignore  API_GUIDE.md  README.md  STREAMLIT_README.md  docker-compose.yml  evaluate.py  face_alignment.py  face_detector.py  face_embedder.py  init_system.py  main.py  minio_client.py  pyproject.toml  requirements.txt  streamlit_app.py  vectordb.py
api/: main.py
models/: database.py  student_service.py
